[project]
name = "mcp-fraudlabspro"
version = "1.1.0"
description = "Fraud Prevention MCP server using FraudLabs Pro API."
readme = "README.md"
license = { text = "MIT" } 
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
]

[project.scripts]
mcp-fraudlabspro = "fraudlabspro.server:main"
